--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,20 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@doggo-rating-workspace/shared/ui-common": [
+        "libs/shared/ui-common/src/index.ts"
+      ],
+      "@doggo-rating-workspace/shared/util-auth": [
+        "libs/shared/util-auth/src/index.ts"
+      ],
+      "@doggo-rating-workspace/shared/util-common": [
+        "libs/shared/util-common/src/index.ts"
+      ],
+      "@doggo-rating-workspace/shared/util-environments": [
+        "libs/shared/util-environments/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
